fix: button wrapping on grouped buttons with input

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -184,3 +184,7 @@ button {
 [role=search] {
   overflow-wrap: anywhere;
 }
+
+[role=group] input+button {
+  overflow-wrap: normal;
+}
